--- a/css/main.css
+++ b/css/main.css
@@ -361,7 +361,7 @@ footer a {
 }
 
 .algolia-autocomplete .aa-hint {
-  color: #C0C9CF;
+  color: black;
   background-color: var(--gray-200) !important;
 }
 
@@ -374,7 +374,7 @@ footer a {
 .algolia-autocomplete .aa-input:focus {
   border-color: var(--gray-200);
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.05);
-  background-color: rgba(255, 255, 255, 0.5) !important;
+  background-color: rgba(255, 255, 255, 0.91) !important;
 }
 
 .autocomplete-header .algolia-autocomplete .aa-input,
